Expose user-select:none to accessibility.

This CL makes user-select:none property visible to accessibility
features via a new boolean attribute, kNotUserSelectable. This is,
for example, useful for select-to-speak, which we expect to skip
non-user-selectable text.

The property is default-false in order to be memory-efficient and
backwards-compatible. Most nodes in the DOM will not have user:select
none, so this property will be omitted from the tree unless the user
explicitly marks user:select=none.

Bug: 830106
Change-Id: I7c8ea7b994514c102389a23bfc5d372ea4737da9
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2353127
Commit-Queue: Ajit Narayanan <ajitnarayanan@google.com>
Reviewed-by: Nektarios Paisios <nektar@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: David Tseng <dtseng@chromium.org>
Reviewed-by: Alex Gough <ajgo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#798398}