third_party/blink/renderer/modules/accessibility/ax_layout_object.h
@@ -96,6 +96,7 @@ class MODULES_EXPORT AXLayoutObject : public AXNodeObject {
   AccessibilityGrabbedState IsGrabbed() const override;
   AccessibilitySelectedState IsSelected() const override;
   bool IsSelectedFromFocus() const override;
+  bool IsNotUserSelectable() const override;
 
   // Whether objects are ignored, i.e. not included in the tree.
   AXObjectInclusion DefaultObjectInclusion(
